--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,114 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@400;700&display=swap');
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Baloo Bhaina 2', cursive;
+  font-size: 1rem;
+  line-height: 1.8;
+}
+* {
+  box-sizing: border-box;
+  transition: 0.3s all;
+  outline: none !important;
+}
+a {
+  text-decoration: none;
+  color: #3ae;
+  font-size: 16px;
+}
+a:hover,
+a:focus,
+a:active {
+  text-decoration: underline;
+}
+button {
+  padding: 10px 15px;
+  border: 1px solid #ccc;
+  box-shadow: 5px 10px 10px #ccc;
+  outline: none;
+  cursor: pointer;
+}
+button:hover,
+button:focus,
+button:active {
+  outline: none;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+h3 {
+  font-weight: 400;
+}
+.navbar {
+  padding: 10px 15px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  border-bottom: 1px solid #ccc;
+  box-shadow: 1px 2px 10px 1px rgba(0, 0, 0, 0.23);
+  background-color: #ffffff;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+main#main {
+  margin-top: 70px;
+}
+.text-center {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.text-right {
+  text-align: right;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.text-left {
+  text-align: left;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card {
+  padding: 15px;
+  border: 1px solid #ccc;
+  margin: 15px;
+}
+/* Utilities */
+.container {
+  max-width: 1100px;
+  margin: auto;
+  overflow: hidden;
+  padding: 0 2rem;
+}
+img.round-img {
+  border-radius: 50%;
+}
+.alert {
+  background: #eee;
+  margin: 10px 15px;
+  padding: 10px;
+}
+nav h1 {
+  display: inline-block;
+}
+nav ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+nav ul li {
+  padding: 0;
+  margin: 0 10px;
+  display: inline-block;
+}
+.row {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.grid2 {
+  width: 50%;
+  padding: 15px;
 }
